WebUI - authentication using Google as Authorization Server. Using JWT to authenticate calls between WebUI and QuoteService. More detailed logging configuration

--- a/web-ui/src/main/resources/templates/login.html
+++ b/web-ui/src/main/resources/templates/login.html
@@ -16,6 +16,7 @@
 <div class="container"
 	 layout:fragment="content">
 	<h1>Please Log In</h1>
+	<h2>Custom login form</h2>
 	<form method="post"
 		  th:action="@{/login}">
 		<div th:if="${param.error}"
