--- a/web-ui/src/main/resources/templates/logout.html
+++ b/web-ui/src/main/resources/templates/logout.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/webjars/bootstrap/css/bootstrap.css" />
 </head>
 <body>
+<h2>Custom logout form</h2>
 <div class="container w-100 justify-content-center">
     <form class="form-signin offset-lg-3 col-lg-6 offset-md-1 col-md-10 col-12 text-center" method="post" th:action="@{/logout}">
         <h2 class="form-signin-heading">Are you sure you want to log out?</h2>
