--- a/web-ui/src/main/resources/templates/secured.html
+++ b/web-ui/src/main/resources/templates/secured.html
@@ -11,8 +11,8 @@
 </head>
 <body>
 <H2><th:block >
-    Secured from <div th:text="${currentUser.fullName}"></div>
-    <div th:text="${#authentication}"></div>
+    <!--Secured from <div th:text="${currentUser.fullName}"></div>-->
+    Secured from <div th:text="${#authentication}"></div>
     <div></div>
 </th:block></H2>
 </body>
