--- a/web-ui/src/main/resources/templates/secured.html
+++ b/web-ui/src/main/resources/templates/secured.html
@@ -8,6 +8,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="/webjars/bootstrap/css/bootstrap.css" />
 </head>
 <body>
 <H2><th:block >
@@ -15,5 +16,13 @@
     Secured from <div th:text="${#authentication}"></div>
     <div></div>
 </th:block></H2>
+
+<div class="container w-100 justify-content-center">
+    <form class="form-signin offset-lg-3 col-lg-6 offset-md-1 col-md-10 col-12 text-center" method="post" th:action="@{/logout}">
+        <h2 class="form-signin-heading">Are you sure you want to log out?</h2>
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Log Out</button>
+    </form>
+
+</div>
 </body>
 </html>
